--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^1.3.0",
     "font-awesome": "^4.7.0",
+    "gravatar": "^1.6.0",
     "material-design-icons": "^3.0.1",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
