--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node bin/build.js && electron-builder",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
+    "build:dir": "node bin/build.js && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=clean node bin/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node bin/build.js",
     "dev": "node bin/dev-runner.js",
     "e2e": "npm run pack && mocha test/e2e",
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
@@ -102,6 +102,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
+    "jquery": "^3.3.1",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "require-dir": "^0.3.0",
@@ -115,9 +116,6 @@
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0"
-  },
-  "directories": {
-    "test": "test"
   },
   "repository": {
     "type": "git",
